# nmem

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.txt  PLOT_DESCRIPTION_TEMPLATE.md  PLOT_STYLES.md  README.md  environment.yml  nmem.code-workspace  pyproject.toml
layout/: die_layout_test.py  die_layout_v1.py  die_layout_v2.py  sample
src/nmem/analysis/: SPG806_20240816_nMem_ICE_ber_D6_A4_C3_2024-08-16 08-44-17.mat  alignment_plots.py  analysis.py  analysis_memory_power.py  analysis_memory_size.py  analysis_spider_plot.py  array_fidelity_plot.py  array_parameter_plotting.py  bar_extrusion.py  bar_plots.py  bit_error.py  calculated_plots.py  constants.py  core_analysis.py  currents.py  data_import.py  die_scatter_plots.py  enable_current_relation.py  enable_current_relation_compare.py  enable_current_relation_display.py  enable_current_relation_fit.py  enable_current_relation_rename.py  error_fft.py  fitting_attempt.py  histogram_utils.py  htron_plotting.py  main_analysis.py  main_analysis_table.py  matrix_plots.py  plot_branch_currents.py  plot_config.py  plot_persistent_current  plot_persistent_current.py  plot_state_currents.py  plot_utils.py  plotting.py  read_current_sweep_operating.py  read_current_sweep_operating_calculation.py  read_current_sweep_sim.py  read_current_sweep_sim_v1.py  (+19 more)
src/nmem/calculations/: analytical_model.py  calculations.py  plotting.py  state_currents.py
src/nmem/layout/: circuit_lib.tex  circuit_v1.tex  circuit_v2.tex  circuit_v3.tex  circuit_v4.tex  die_layout_test.py  die_layout_v1.py  die_layout_v2.py
(+855 files in other folders)
