[tool.ruff]
lint.ignore = ["F841", "E731", "E501"]
lint.extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "nmem"
version = "0.1.1"

authors = [
  { name="O. Medeiros", email="omedeiro@mit.edu" },
]
maintainers = [
  { name="O. Medeiros", email="omedeiro@mit.edu" },
]
description = "code related to the NMEM project at MIT"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["nanowire_electronics", "instrument control"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]